<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.javadev</groupId>
  <artifactId>nazk-client</artifactId>
  <packaging>jar</packaging>
  <version>1.1-SNAPSHOT</version>

  <name>Java client for declarations</name>
  <description>Java client for declarations from the nazk.gov.ua</description>
  <url>https://github.com/javadev/nazk-client</url>

  <developers>
    <developer>
      <id>javadev</id>
      <name>Valentyn Kolesnikov</name>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>The MIT License</name>
      <url>http://opensource.org/licenses/MIT</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:https://github.com/javadev/nazk-client.git</connection>
    <developerConnection>scm:git:https://github.com/javadev/nazk-client.git</developerConnection>
    <url>https://github.com/javadev/nazk-client</url>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <underscore.version>1.34</underscore.version>
    <junit.version>4.13.1</junit.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.github.javadev</groupId>
      <artifactId>underscore</artifactId>
      <version>${underscore.version}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <ciManagement>
    <system>Travis CI</system>
    <url>https://travis-ci.org/javadev/nazk-client</url>
  </ciManagement>

  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/javadev/nazk-client</url>
  </issueManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
          <configuration>
              <archive>
                  <manifest>
                      <mainClass>com.github.javadev.nazk.client.HttpClient</mainClass>
                  </manifest>
              </archive>
          </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>2.4.3</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/maven/**</exclude>
                    <exclude>META-INF/services/**</exclude>
                    <exclude>META-INF/COPYRIGHT.html</exclude>
                    <exclude>META-INF/LICENSE*</exclude>
                    <exclude>META-INF/NOTICE*</exclude>
                    <exclude>META-INF/README.txt</exclude>
                    <exclude>META-INF/DEPENDENCIES*</exclude>
                    <exclude>LICENSE.txt</exclude>
                    <exclude>rhinoDiff.txt</exclude>
                    <exclude>license/**</exclude>
                  </excludes>
                </filter>
              </filters>
              <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.19.1</version>
        <configuration>
            <argLine>${argLine} -Xmx4g -XX:MaxPermSize=512m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eluder.coveralls</groupId>
        <artifactId>coveralls-maven-plugin</artifactId>
        <version>3.2.1</version>
        <configuration>
          <repoToken>ShzJOsx09PVso9ByvDoqyVJPfmibE9iw0</repoToken>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>0.7.7.201606060606</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>default-report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
